# discordify

./: Cargo.toml  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  rust.yml  windows.yml
src/: audio_transcode.rs  main.rs  utils.rs  video_transcode.rs
