[package]
name = "discordify"
version = "0.1.0"
edition = "2024"

[dependencies]
wl-clipboard-rs = "0.9.2"#having issues with copying as a pastable video
rust-embed="8.7.2"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"] }
ffmpeg-next = "7.1.0"
sha1 = "0.11.0-rc.0"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }